<TextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_TextView"
    android:layout_width="100dp"
    android:layout_height="60dp"
    android:layout_marginTop="@dimen/cardWidgetMargin"
    android:layout_marginBottom="@dimen/cardWidgetMargin"
    android:textSize="@dimen/textWidgetSize"
    android:textStyle="bold"
    android:background="@drawable/step_background"
    android:textColor="@color/textColor"
    android:gravity="center"/>