<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/RecipeFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/cardMargin"
        tools:context="com.example.ankit_pc.bakingappudacity.RecipesMainFragment"/>



</FrameLayout>